application/backend/manifests/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: scrum-backend-db
    namespace: scrum-backend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: scrum-backend-db
    template:
        metadata:
            labels:
                app: scrum-backend-db
        spec:
            nodeSelector:
                "kubernetes.io/os": linux
            containers:
                - name: scrum-backend-db
                  image: postgres:latest
                  resources: {}
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - name: databasevolume
                        mountPath: /var/lib/postgresql
                        subPath: backup
            volumes:
                - name: databasevolume
                  persistentVolumeClaim:
                      claimName: scrum-backend-db-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: scrum-backend-db-service
    namespace: scrum-backend
spec:
    selector:
        app: scrum-backend-db
    ports:
        - protocol: TCP
          port: 5432
          targetPort: 5432
